--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
+# actix-web = "3"
+actix-web = "4.0.0-rc.3"
+sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres" ] }
